--- a/templates/gateway.yml
+++ b/templates/gateway.yml
@@ -40,6 +40,19 @@ objects:
                     pipe:
                       path: /sockets/admin.socket
 
+        - name: ext_fedora_auth
+          connect_timeout: 2s
+          type: STRICT_DNS
+          load_assignment:
+            cluster_name: ext_fedora_auth
+            endpoints:
+            - lb_endpoints:
+              - endpoint:
+                  address:
+                    socket_address:
+                      address: localhost
+                      port_value: 5556
+
         ### Listeners ###
         listeners:
         # The admin listener isn't exposed, and is used only by the service monitor to scrape metrics.
@@ -76,6 +89,46 @@ objects:
                 - name: envoy.filters.http.router
                   typed_config:
                     "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+
+        - name: ingress
+          address:
+            socket_address:
+              address: 0.0.0.0
+              port_value: 10000
+          filter_chains:
+            filters:
+            - name: envoy.filters.network.http_connection_manager
+              typed_config:
+                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+                access_log:
+                - name: envoy.access_loggers.file
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+                    path: /dev/stdout
+                stat_prefix: ingress
+                route_config:
+                  name: ingress
+                  virtual_hosts: []
+
+                http_filters:
+                - name: envoy.filters.http.ext_authz
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
+                    http_service:
+                      server_uri:
+                        uri: 127.0.0.1:5556
+                        cluster: ext_fedora_auth
+                        timeout: 2s
+                        failure_mode_allow: false
+                    authorization_response:
+                      allowed_upstream_headers:
+                        patterns:
+                        - exact: x-fedora-identity
+
+                - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+
 
 - apiVersion: apps/v1
   kind: Deployment
@@ -161,6 +214,42 @@ objects:
             mountPath: /configs/envoy
           - name: sockets
             mountPath: /sockets
+        - name: oidc-authorizer
+          image: "${IMAGE_NAME}:${IMAGE_TAG}"
+          command:
+          - /oidc-authorizer
+          ports:
+          - name: auth
+            protocol: TCP
+            containerPort: 5556
+          livenessProbe:
+            httpGet:
+              path: /ready
+              port: 5556
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 10
+            timeoutSeconds: 1
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 5556
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 10
+            timeoutSeconds: 1
+          env:
+          - name: PROVIDER
+            value: ${OIDC_PROVIDER}
+          resources:
+            requests:
+              cpu: "${AUTHORIZER_CPU_REQUEST}"
+              memory: "${AUTHORIZER_MEMORY_REQUEST}"
+            limits:
+              cpu: "${AUTHORIZER_CPU_LIMIT}"
+              memory: "${AUTHORIZER_MEMORY_LIMIT}"
         volumes:
         # - name: tls
         #   secret:
@@ -244,3 +333,18 @@ parameters:
 - name: MEMORY_LIMIT
   description: Memory limit per container
   value: "512Mi"
+- name: AUTHORIZER_CPU_REQUEST
+  description: CPU request per container
+  value: "100m"
+- name: AUTHORIZER_CPU_LIMIT
+  description: CPU limit per container
+  value: "200m"
+- name: AUTHORIZER_MEMORY_REQUEST
+  description: Memory request per container
+  value: "64Mi"
+- name: AUTHORIZER_MEMORY_LIMIT
+  description: Memory limit per container
+  value: "128Mi"
+- name: OIDC_PROVIDER
+  description: Openid connect provider (issuer)
+  value: "https://id.stg.fedoraproject.org/openidc/"
