--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,3 +30,39 @@ jobs:
         directory: processed-templates
         config: templates/.kube-linter-config.yml
         version: v0.6.5
+
+  golang-tests:
+    name: "🛃 Checks"
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go 1.19
+      uses: actions/setup-go@v5.0.0
+      with:
+        go-version: 1.19
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3.0.2
+
+    - name: Check that source has been prepared
+      working-directory: oidc-authorizer
+      run: |
+        ./tools/prepare-source.sh
+        if [ -n "$(git status --porcelain)" ]; then
+          echo
+          echo "Please include these changes in your branch: "
+          git status -vv
+          exit "1"
+        else
+          exit "0"
+        fi
+
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        working-directory: oidc-authorizer
+        version: v1.50.1
+
+    - name: Run unit tests
+      working-directory: oidc-authorizer
+      run: go test -v -race -covermode=atomic -coverprofile=coverage.txt -coverpkg=./... ./...
