templates/gateway: no routes requires empty array

--- a/templates/gateway.yml
+++ b/templates/gateway.yml
@@ -125,7 +125,7 @@ objects:
                   - name: api
                     domains:
                     - "*"
-                    routes:
+                    routes: []
                     # - match:
                     #     prefix: /api/image-builder
                     #   route:
