templates/gateway: fix routes typo

--- a/templates/gateway.yml
+++ b/templates/gateway.yml
@@ -131,7 +131,7 @@ objects:
                     - x-fedora-identity
                     domains:
                     - "*"
-                    routes: []
+                    routes:
                     - match:
                         prefix: /api/image-builder
                       route:
