--- a/templates/gateway.yml
+++ b/templates/gateway.yml
@@ -197,7 +197,7 @@ objects:
                 topologyKey: kubernetes.io/hostname
         containers:
         - name: community-gateway
-          image: "${ENVOYPROXY_IMAGE_NAME}:${ENVOYPROXY_IMAGE_TAG}"
+          image: "${IMAGE_NAME}:${IMAGE_TAG}"
           command:
           - /usr/bin/envoy
           - --config-path
@@ -240,7 +240,7 @@ objects:
           - name: sockets
             mountPath: /sockets
         - name: oidc-authorizer
-          image: "${OIDC_AUTHORIZER_IMAGE_NAME}:${IMAGE_TAG}"
+          image: "${IMAGE_NAME}:${IMAGE_TAG}"
           command:
           - /oidc-authorizer
           ports:
@@ -324,20 +324,13 @@ objects:
         protocol: TCP
 
 parameters:
-- description: oidc authorizer image name
-  name: OIDC_AUTHORIZER_IMAGE_NAME
-  value: quay.io/cloudservices/oidc-authorizer
+- description: community-gateway image name
+  name: IMAGE_NAME
+  value: quay.io/cloudservices/community-gateway
   required: true
-- description: oidc authorizer tag, will be set by the deployment pipeline
+- description: community-gateway tag, will be set by the deployment pipeline
   name: IMAGE_TAG
   required: true
-- description: envoy proxy image name
-  name: ENVOYPROXY_IMAGE_NAME
-  value: quay.io/app-sre/envoyproxy
-  required: true
-- description: envoy proxy tag
-  name: ENVOYPROXY_IMAGE_TAG
-  value: "latest"
 - description: number of pods to spin up, minimum 3
   name: REPLICAS
   value: "3"
